--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,15 +1,12 @@
 baseURL: https://cdalamagkas.gr
-
 languageCode: en-us
-title: "Christos Dalamagkas"
+title: Christos Dalamagkas
 
 # Use Hugo modules to add theme
 module:
   imports:
   - path: github.com/hugo-toha/toha/v4
   mounts:
-  - source: static/files
-    target: static/files
   - source: ./node_modules/flag-icon-css/flags
     target: static/flags
   - source: ./node_modules/@fontsource/mulish/files
@@ -83,9 +80,5 @@ params:
       # Currently, you can just hide it from the footer.
       newsletter:
         enable: false
-  
-
-
-
 
 
